@@ -15,6 +15,7 @@ This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.htm
  - [regDaniel, 2024-04-09] Minor adaptions to better comply with PEP standards.
  - [fpavogt, 2024-03-26] Use "height" in "ft aal" throughout.
 ### Changed:
+ - [fpavogt, 2024-03-25] Set the fluffiness boost to 2 (fixes #123).
  - [fpavogt, 2024-03-23] Changed default mock dataset to be 900s long (instead of 2400s).
 
 ## [v1.0.0]
